Organizando os arquivos em pastas

--- a/style/aluno1.css
+++ b/style/aluno1.css
@@ -197,9 +197,9 @@ article#curiosities > h2{
     z-index: 1;
 }
 
-.flex-container > #dog::after {background-image: url(IMGS/dog.JPEG);}
-.flex-container > #basketball::after {background-image: url(IMGS/basketball.JPEG);}
-.flex-container > #me-young::after {background-image: url(IMGS/babyRyan.JPEG);}
+.flex-container > #dog::after {background-image: url(../IMGS/dog.JPEG);}
+.flex-container > #basketball::after {background-image: url(../IMGS/basketball.JPEG);}
+.flex-container > #me-young::after {background-image: url(../IMGS/babyRyan.JPEG);}
 
 #lists{
     display: flex;
